+ Ajout robots.txt / correction phrase

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="features">
         <div class="container">
             <h3>Domaines d'expertise</h3>
-            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée. Je m'interesse beaucoup à l'esprit Low-Tech où la réalisation se doit d'être utile, durable et accessible.</p>
+            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée, je porte une attention particulière à l'esprit Low-Tech, où la réalisation se doit d'être utile, durable et accessible.</p>
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
@@ -288,7 +288,7 @@
                         <svg class="question_arrow" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="#fff" stroke-width="3" d="M1 1l8 8 8-8" class="question_arrow_path"></path></svg>
                     </div>
                     <div class="answer">
-                        <p class="answer_content">Bien des choses ! Je dirais surtout que j'aime apprendre de nouvelles choses tous les jours, lorsqu'il y a quelque chose que je ne connais pas, je fonce. Je me suis d'ailleurs formé en autodidacte à la conception web et à la modélisation 3D. Et sinon, j'aime la randonnée, les voyages, les découvertes...</p>
+                        <p class="answer_content">Bien des choses ! Je dirais surtout que j'aime apprendre de nouvelles choses tous les jours, lorsqu'il y a quelque chose que je ne connais pas, je fonce. Je me suis d'ailleurs formé en autodidacte à la conception web et à la modélisation 3D. Côté loisirs, j'aime la randonnée, les voyages, les découvertes, et encore énormément de choses...</p>
                     </div>
                 </div>
             </div>
