+ small issues with languages icons + Add real favicons for every devices

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" media="screen" href="style.css">
-    <link rel="stylesheet" media="print" href="style.css" />
+    <link rel="stylesheet" media="screen" href="style-min.css">
+    <link rel="stylesheet" media="print" href="style-min.css" />
 
-    <title>Marc Zetek -- Ingénieur polyvalent</title>
+    <title>Marc Zetek -- Ingénieur électronique et développeur web</title>
     <meta name="description"
         content="Accompagnement technologique sur mesure. Conception électronique, réalisation de sites et application web, développement logiciel.">
 </head>
